# pelican_crash_lab

./: README.md  pyproject.toml
content/: about_me.md
output/: Short Bio.html  archives.html  authors.html  categories.html  index.html  tags.html
output/author/: hong.html
output/category/: about-me.html  about.html  python.html
output/tag/: bio.html  pelican.html  publishing.html
src/: pelicanconf.py
